Moved some of the methods to the main article and icnluded a more detailed version of the DBEM

--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -32,18 +32,42 @@ packages <- c(
 my_lib(packages)
 ```
 
-
 **Materials and methods**
 
 _**Databases and species selection**_
 
-The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. When a species was shared by a pair of neighboring EEZs it was considered a transboundary stock [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks. Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories. . We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table S\@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
+The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. When a species was shared by a pair of neighboring EEZs it was considered a transboundary stock [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks. Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table S\@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
 
 _**Projecting species distributions under climate change**_
 
-We projected the future distribution of transboundary stocks using a dynamic bioclimatic envelope model (hereafter called DBEM) [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd]. The DBEM determines the environmental space a species will occupy based on physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences for sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. For pelagic species, the model uses environmental variables at the surface whereas demersal and benthic species’ distributions are driven by ocean bottom variables. The DBEM then estimates species’ abundance and maximum catch potential (a proxy for maximum sustainable yield) over a regular spatial grid of 0.5 of latitude per 0.5 of longitude (see @Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd for model details). Importantly, DBEM is able to project catches by Exclusive Economic Zones that are consistent with observational-based estimates of catch from 1950 to 2016 [@Cheung:2016jd, Cheung et al. *in revision*].
+We projected the future distribution of transboundary stocks using a dynamic bioclimatic envelope model (hereafter called DBEM). The DBEM determines the environmental space a species will occupy based on physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences for sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. The DBEM then estimates species’ abundance and maximum catch potential (a proxy for maximum sustainable yield) over a regular spatial grid of 0.5 of latitude per 0.5 of longitude. Below we provide an overall description of the model. Please see @Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd for a more detailed version. Importantly, the DBEM is able to project catches by Exclusive Economic Zones that are consistent with observational-based estimates of catch from 1950 to 2016 [@Cheung:2016jd, Cheung et al. *in revision*].
 
- DBEM was driven by simulated ocean conditions from a ten-ensemble member simulation of the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project the distributions of the 633 species from 1951 to 2100 [@Dunne:2012bo; @Dunne:2013db; @Rodgers:2015jq]. The GFDL-ESM2M was run under historical forcing until 2005 and follows a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5), over the 2006-2100 period [@Riahi:2011dk]. We chose this time period to match the historical period in the GFDL ESM2M simulations over which the model was forced with observation-based greenhouse gas, aerosol and natural external forcing [@Rodgers:2015jq]. Because the main approach of this paper relies on understanding the spatial and temporal variation of a stock’s distribution, we have to understand distribution variability during both historical and future periods, to infer differences between time frames. To this end, each of the ten GFDL-ESM2M ensembles were started from infinitesimally small differences in Earth system initial conditions in 1950, resulting in a unique atmosphere and ocean state at each point in time after about three years for surface and eight years for subsurface waters [@Frolicher:2020cc]. By design, variations among ensemble members are then solely due to natural internal variability (e.g., different phases of the El Niño Southern Oscillation-ENSO). Thus, for our experiment, each of the ten GFDL-ESM2M ensembles were started from infinitesimally small differences in Earth system initial conditions in the year 1950, resulting in a unique atmosphere and ocean state at each point in time after about three years for surface waters and eight years for subsurface waters [@Frolicher:2020cc].
+For each species, the DBEM uses the Sea Around Us (www.searaundus.org) distributional data and environmental variables from 1970 to 2000 to estimate the current distribution and environmental profile of each species. Moreover, it projects the future habitat suitability in each grid-cell (*i*) based on the following components;
+
+\begin{equation}
+\label{eq:one}
+Hs = P(T_{i},TPP) *  P(Ba_{i}, Min_{D}, Max_{D}) * P(Hab_{i,j}, Hab_{Assoc}) * (Sal_{i}, Sal_{Assoc}) * P(Ice_{i}, Ice_{P})
+\end{equation}
+
+where *T* is seawater temperature, *TPP* is the species temperature profile, *Ba* is bathymetry, $Min_{D}$ and $Max{D}$ are the species minimum and maximum depth limits, *Hab* is the proportion of area of the habitat type *j* relative to the total seawater area of the cell *i*, $Hab_{Assoc}$ is an habitat association index, *Sal* is the salinity class of cell *i* and $Sal_{Assoc}$ is a salinity class association index. Finally, for polar regions and species, *Ice* is sea ice extent, and $Ice_{P}$ is association to sea ice. For pelagic species, the model uses environmental variables at the surface whereas demersal and benthic species’ distributions are driven by ocean bottom variables.
+
+The DBEM also integrates each species preference profile with physiology and population dynamics to project relative biomass assuming that spatio-temporal dynamics are determined by intrinsic growth rate, larval dispersion, and adult migration;
+
+\begin{equation}
+\label{eq:two}
+\frac{dA}{dt} = \sum_{j=1}^{n} (L_{ji} + Ad_{ji} + G_i)
+\end{equation}
+
+where $A_i$ is the relative abundance of the gri-cell *i*, *G* is the intrinsic population growth and $L_{ji}$ and $Ad_{ji}$ are settled larvae and net migrated adults from surrounding cells (*j*), respectively. Larval dispersal is modeled through ocean current with an advection-diffusion-reaction model. Finally, $G_i$ estimates the intrinsic growth following a logistic equation and the intrinsic rate of population increase (*r*):
+
+\begin{equation}
+\label{eq:three}
+G_i = r * A_i * (1-\frac{A_i}{A_{\infty,i}})
+\end{equation}
+
+Finally, the DBEM projects maximum catch potential by setting fishing mortality to half of the intrinsic population growth rate of the species (*f = r/2*).
+
+The DBEM was driven by simulated ocean conditions from a ten-ensemble member simulation of the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project the distributions of the 633 species from 1951 to 2100 [@Dunne:2012bo; @Dunne:2013db; @Rodgers:2015jq]. The GFDL-ESM2M was run under historical forcing until 2005 and follows a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5), over the 2006-2100 period [@Riahi:2011dk]. We chose this time period to match the historical period in the GFDL ESM2M simulations over which the model was forced with observation-based greenhouse gas, aerosol and natural external forcing [@Rodgers:2015jq]. Because the main approach of this paper relies on understanding the spatial and temporal variation of a stock’s distribution, we have to understand distribution variability during both historical and future periods, to infer differences between time frames. To this end, each of the ten GFDL-ESM2M ensembles were started from infinitesimally small differences in Earth system initial conditions in 1950, resulting in a unique atmosphere and ocean state at each point in time after about three years for surface and eight years for subsurface waters [@Frolicher:2020cc]. By design, variations among ensemble members are then solely due to natural internal variability (e.g., different phases of the El Niño Southern Oscillation-ENSO). Thus, for our experiment, each of the ten GFDL-ESM2M ensembles were started from infinitesimally small differences in Earth system initial conditions in the year 1950, resulting in a unique atmosphere and ocean state at each point in time after about three years for surface waters and eight years for subsurface waters [@Frolicher:2020cc].
 
 
 _**Calculating an index of transboundary range shift**_
@@ -88,7 +112,7 @@ Knowing the point in time at which the distribution of a shared stock will diver
 ToE = TI_\mu[t']>2* TI_\sigma 
 \end{equation}
 
-Thus, we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TI “emerges” from historical internal variability (*t’*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution. We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). Sensitivity tests to a lower threshold of 1 s.d. (or 68% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
+Thus, we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TI “emerges” from historical internal variability (*t’*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution.
 
 
 _**Quantifying the intensity of transboundary stocks’ range shift**_
