--- a/Scripts/Reviews/reviewer_three.Rmd
+++ b/Scripts/Reviews/reviewer_three.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Responses to Reviewer Three"
-author: "Juliano Palacios"
-date: "03/05/2021"
 output: pdf_document
 ---
 
@@ -17,54 +15,82 @@ This paper covers an interesting and important question: how soon and how much w
 
 - Informing global fisheries sustainability and meeting the SDG 2030 Agenda is a useful framing, in my opinion. However, given that framing and the research questions posed in this paper, I think the authors have overlooked two very important cases: 1) stocks that are currently confined to a single EEZ (“national stocks”) that will shift into transboundary stocks by 2100, and 2) stocks that are currently transboundary stocks that will shift entirel into a single EEZ by 2100, becoming national stocks. From a sustainability perspective, I am more concerned about case #1 than stocks that are already transboundary that are going to shift their distributions but maintain their transboundary status (the only cases currently examined in this paper). Some of those stocks might already have cooperative management agreements in place. And if they don’t, they are already plagued by the overharvesting that is likely to occur in the absence of international cooperation. Stocks that are currently national, however, have a higher likelihood of being managed sustainably now, and that likelihood will decline when they become transboundary. This seems like the most important case to analyze, and one that seems totally feasible to examine within the authors’ analysis framework, and yet this seems to have been completely overlooked. I also think it would be interesting to determine what proportion of current transboundary stocks become national stocks – the authors should have been able to detect these cases and I would assume there are some, but it is not mentioned anywhere in the paper. This seems like a missed opportunity for greater insights and is a mismatch between the stated goals of the paper and the results that are presented.
 
+- **Response:** We appreciate the reviewer's comment regarding our method and understand the concern on consider national stocks that become transboundary stocks and *vice versa*, however, these questions have already been responded by Pinsky *et al* (2018) and Oremus *et al.* (2020) and consequently, follow outside the scope of the current paper. 
 
-- The methods are pretty dense, so I would recommend making sure that all of the results
-are really clearly described. In a few places, I found them confusing despite having read
-the methods very carefully. Specifically:
+In their 2018 paper, Pinsky *et al* look at how many *new* transboundary species each EEZ of the world will have towards the end of the century under climate change (i.e., national stocks that become transboundary stocks). Indeed, the authors find that "*many of the world’s EEZs are likely to receive one to 12 new, climate-driven transboundary stocks by the end of the century*." On the other hand, Oremus *et al* (2020) "*estimates the number of species exiting national jurisdictions under climate change up to 2100*" concluding that *tropical nations stand to lose the most species under these scenarios.* However, both studies fail to identify changes in the *current* transboundary stock, gap that we look to fill int his paper. Here, we used the species (n = 633) identified by Palacios-Abrantes *et al* (2020) as transboundary and consequently do not have national stocks identified. This was on purpose as the objective of our paper is precisely to look at the impacts of climate change on *current* transboundary species. Addressing the question of entering/exciting stocks would require us to change our initial species list, change our otherwise already complex and long methodology, and likely give the paper a different perspective.
 
- - Pg 6, line 16: Is 23% the proportion of revenue from transboundary stocks? Or the proportion of total fishing revenue? It is not totally clear to me as written. I think it’s the former, in which case line 19 should say “…less than 1% of transboundary fishing revenue” and the legend in Fig. 2A should read “% of transboundary fishing revenue.”
+ - Oremus KL, Bone J, Costello C, Molinos JG, Lee A, Mangin T, Salzman J. 2020. Governance challenges for tropical nations losing fish species due to climate change. *Nature Sustainability* 6:1–4.
+
+ - Palacios-Abrantes J, Reygondeau G, Wabnitz CCC, Cheung WWL. 2020. The transboundary nature of the world’s exploited marine species. *Scientific Reports* 10:415–12.
+ 
+ - Pinsky ML, Reygondeau G, Caddell R, Palacios-Abrantes J, Spijkers J, Cheung WWL. 2018. Preparing ocean governance for species on the move. *Science* 360:1189–1191.
+
+
+The methods are pretty dense, so I would recommend making sure that all of the results are really clearly described. In a few places, I found them confusing despite having read the methods very carefully. Specifically:
+
+Pg 6, line 16: Is 23% the proportion of revenue from transboundary stocks? Or the proportion of total fishing revenue? It is not totally clear to me as written. I think it’s the former, in which case line 19 should say “…less than 1% of transboundary fishing revenue” and the legend in Fig. 2A should read “% of transboundary fishing revenue.”
+
+ - **Response:** We agree that this was confusing and have modified the initial sentence and adopted the suggestions provided in the revised manuscript. It reads in line **XX** of page **X**: "*From all fisheries targeting transboundary stocks between 2004 and 2010 in the global EEZs, shifting stocks represented on average 23% (s.d. ± 22%) of the yearly revenue (Fig. 2A).*"
 
  - Pg 9, Line 6: is 59% the proportion of stocks that will shift their catch distribution? Or is it the average proportion of the catch that shifts between countries?
 
+ - **Response:** We meant that 59% is the average proportion of the catch that shifts between countries, or more specific, the stocks reponsable for that catch. We have revised the manuscript to clarify this, it reads on line **XX** of page *X*: "*Findings show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks is projected to change beyond an EEZ’s historic proportion (i.e., between 2004 and 2010; Fig. 4A)*"
+
 - The methods are ENTIRELY in the supplementary materials. I have no problem with more abbreviated methods in the main paper and more details in the supplement, but there needs to be some methods in the main paper. A reader needs to be able to understand the basic approach without going to the supplementary materials.
 
-- *Response:* We have now included a summarized version of the methods in the main article.
+- **Response:** The main structure was following the journal's guideline. We have now included a summarized version of the methods in the main article.
 
 - Pg 31-32: Does the TI capture the equality of sharing of the stock between two countries, or just how stable it is over time? The text claims an increasing TI means management is getting more challenging and a decreasing TI that the sharing between countries is becoming more stable (but not necessarily more equal)….is that the right interpretation? And how does that align with the example in Fig S6, where the TI seems to decline over the entire time series…..does that mean the sharing is becoming more stable?
 
+*Response:* William, thoughts?
+
 - I like the time of emergence concept and how it was applied in this analysis.
 
-**Response:** We appreciate the acknowledgement. 
+**Response:** We appreciate the acknowledgment on our methods. 
 
 - I also like the idea of the threat point analysis to identify when a stock is sufficiently shared with another country to motivate cooperative management. However, I was confused by how the threat point was implemented using the stock share ratio (SSR) – why is the threat point determined relative to the historic SSR? I assume the idea of a threat point from game theory is based on the proportion of catch or value that is shared, and I don’t see how the starting point SSR would be relevant? Maybe I misunderstood what the authors did here, but conceptually/theoretically I’m not understanding the rationale for their approach so at the very least it needs more explanation and justification. But I’m concerned it actually needs to be based on a theoretical proportion, not a quantity interpreted relative to a historic proportion.
 
+- Response: Missing
+
+
 - I think a version of Fig. S6 would be useful for the main paper. (But a few small comments about this figure: in panel a, I don’t understand why the EEZ centroids aren’t shown in the middle of the EEZ boxes? Also, for panel b, I see a red open circle in the legend, but I don’t see that anywhere on the actual figure.) 
 
-**Response:** THank you for noticing the EEZ centroids. The figure has been corrected and included the figure in the main text.
+**Response:** Thank you for noticing the misplace of the EEZ centroids. The figure has been corrected and included the figure in the main text (It is now Fig. 1). The open red circles are located in the bottom panel (B) in each time step where the future distribution overpasses the natural variability. 
 
 # Minor comments
 
 - I know this is nitpicky, but please don’t have line numbers restart on each page. It just makes it more cumbersome on a reviewer trying to give detailed comments.
 
-**Response:** We understand (and agree!) with this comment. Unfortunately, this is how the *Science* template is currently distributed.
+**Response:** We understand (and agree!) with this comment. Unfortunately, this is how the *Science* template was distributed to us.
 
 - Page1, Line 15: I suggest reporting the proportion of stocks (which looks like it would be between 20-25%), rather than the 78% reported here. Saying that transboundary stocks will shift their distributions across 78% of “the world’s international boundaries” feels a little misleading…..the results show that 78% of EEZs will experience a shifting stock. The proportion of stocks is a much easier to understand figure (particularly in the abstract) an is more directly comparable to the 45% figure given in the next sentence. The 78% feels like an unnecessary attempt to be flashy in the abstract.
 
+**Response:** Thank you, we have adopted the suggested approach. You will read in line 14 of page 1: "*Using global climate-fisheries model simulations, we show that 78% the world’s international boundaries will experience a shifting transboundary stock by 2030*".
+
 - Pg 3, Line 2: First sentence doesn’t reflect the content in the rest of the paragraph. It would work better as a topic sentence for the third paragraph.
+
+- **Response**: We agree with this observation and have modified the revised manuscript to reflect it.
 
 - Pg 3, Line 7: change “have shifted” to “are shifting” – this paper shows the shifts aren’t done happening yet
 
 - **Response:** Thank you for noticing this. We have changed the wording to reflect this comment. 
 
+- Pg 4, Line 11-12: I don’t understand what is meant by “misalignment between fisheries resources allocation and distribution shifts” – language is confusing. Do the authors mean misalignment between fishing effort and stock biomass? 
 
-- Pg 4, Line 11-12: I don’t understand what is meant by “misalignment between fisheries resources allocation and distribution shifts” – language is confusing. Do the authors mean misalignment between fishing effort and stock biomass? Also in this paragraph, I think it would be helpful for the authors to add a couple of sentences of explanation for why transboundary stocks are more likely to be over-exploited.
+- **Response:** We meant misalignment between fishing allocation rules and the stock's biomass this has been clarified in the revised manuscript.
+
+Also in this paragraph, I think it would be helpful for the authors to add a couple of sentences of explanation for why transboundary stocks are more likely to be over-exploited.
+
+- **Response:** We have included one of the examples we referenced, it now reads in line *XX* of page *xxx in the revised manuscript:* *"For example, Pacific salmon (Oncorhynchus sp.) jointly managed by Canada and the U.S. was heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet (18).*"
 
 - Pg 29: I realize the DBEM model is described in other papers, but a little more detail here would be helpful so that a reader doesn’t have to consult other papers to have a better sense of what the inputs are, how it was parameterized for each stock, etc. I suggest adding another paragraph to this effect.
 
+- **Response:** We have included an overall description of the DBEM (including the main equations) in line **XX** of page **X** of the supplemental material.
+
 - Pg 30, lines 8-12: this text is repeated from earlier in the paragraph
 
-- *Response:* Thank you for noticing. We have removed the repeated text.
+- **Response:** Thank you for noticing. We have removed the repeated text.
 
 - Fig. S4 needs a color bar legend
 
-- *Response:* Thank you for noticing. Fig. S4 has now a bar legend. 
+- **Response:** Thank you for noticing. Both figures 4 (now Fig. 5) and S4 have a bar color legend now.
