Included a summary of methods and re-organized figures

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -79,7 +79,18 @@ The concept of shared stocks was developed following the ratification of the Uni
 
 Most fisheries management is poorly adapted to address species’ shifting distributions as a result of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of climate change on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon (Oncorhynchus sp.) jointly managed by Canada and the U.S. was heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Such patterns are expected to be exacerbated under continuing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the Sustainable Development Goals (SDG) under the UN 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
-Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth System Model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries under a high greenhouse gas emissions scenario (see Methods **and Supplemental Materials**). We then estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. \@ref(fig:toeFigure1)A) and the intensity of this shift (i.e., time of emergence and stock share ratio; see Methods **and Supplemental Materials**). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
+Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth System Model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries under a high greenhouse gas emissions scenario (see Methods **and Supplemental Materials**). We then estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. \@ref(fig:toeFigure1N)) and the intensity of this shift (i.e., time of emergence and stock share ratio; see Methods **and Supplemental Materials**). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
+
+```{r toeFigure1N, eval = F,  echo = F, fig.width=14, fig.height=10, fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel)."}
+
+img <- readPNG("../Figures/Fig1.png")
+grid.raster(img)
+
+```
+
+\clearpage
+
+
 
 **Identifying range shifts in the shared distribution of transboundary stocks**
 
@@ -87,7 +98,7 @@ Here, we employ a mechanistic population dynamic model driven by output from a c
 
 ```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) with their distribution centroids that have shifted beyond natural variations, (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one shifting stock, beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (see Methods), respectively."}
 
-img <- readPNG("../Figures/Fig1.png")
+img <- readPNG("../Figures/Fig2.png")
 grid.raster(img)
 
 ```
@@ -100,7 +111,7 @@ On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of y
 
 ```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "**Year of change in the shared distribution of 4,119 transboundary stocks.** A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. EEZs with no distributional shift between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represent the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
 
-img <- readPNG("../Figures/Fig2.png")
+img <- readPNG("../Figures/Fig3.png")
 grid.raster(img)
 
 ```
@@ -112,7 +123,7 @@ We estimated the current (2005 - 2010) contribution of shifting stocks to yearly
 
 ```{r toeFigure3, eval = T,  echo = F, fig.width=8, fig.height=6, fig.pos= "H", fig.cap =  "**Average range shift of transboundary stocks and corresponding fishing revenue per country.** Countries are coded according to different colored symbols representative of 5 distinct regions. Horizontal line separates countries above and below the 75th percentile of annual fishing revenue. Showing country names for those within the top 75th percentile projected to have an average shift within 5 years after the 2030 Agenda."}
 
-img <- readPNG("../Figures/Fig3.png")
+img <- readPNG("../Figures/Fig4.png")
 grid.raster(img)
  
 ```
@@ -125,7 +136,7 @@ We estimated the intensity of the distributional shift of transboundary stocks i
 
 ```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "**Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005.** Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
 
-img <- readPNG("../Figures/Fig4.png")
+img <- readPNG("../Figures/Fig5.png")
 grid.raster(img)
 
 ```
@@ -164,16 +175,13 @@ The global community has set the ambitious goal of managing all fisheries sustai
 
 **Methods **
 
-We estimate the year in which 663 transboundary species previously identified by [@PalaciosAbrantes:2020tv] (i.e., 9,132 stocks) would undergo changes in their shared distribution beyond historical variation and the intensity of said changes (see the Supplementary Materials - *Databases and species selection*). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas). We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division, noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories.
+We estimate the year in which 663 transboundary species (i.e., 9,132 stocks) previously identified by Palacios-Abrantes *et al.* (2020) [@PalaciosAbrantes:2020tv] would undergo changes in their shared distribution beyond historical variation and the intensity of said changes (see the Supplementary Materials). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas). We defined the boundaries of the world’s EEZs using the Sea Around Us (http://www.seaaroundus.org/) spatial division, noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories (see the Supplementary Materials - *Databases and species selection*).
 
-We coupled a mechanistic population dynamic model (i.e., the DBEM) with an Earth System Model (i.e., the Geophysical Fluid Dynamics Laboratory Earth system model, GFDL) to project the future global distribution of transboundary stocks’ under climate change (see the Supplementary Materials). Roughly, the DBEM algorithm uses historical species distribution and catch, eco-physiology, habitat suitability and  spatial population dynamics to project abundance and potential fisheries catches in a $0.5^o$ x $0.5^o$ grid-cell of the world [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd]. The DBEM was driven for ten different versions of the GFDL (i.e., a ten-ensemble member simulation) each of them representing an unique atmosphere and ocean state at the start of the simulation [@Dunne:2012bo; @Dunne:2013db; @Frolicher:2020cc]. The simulations were run under historical forcing until 2005, afterwards and until 2100, simulations followed a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5) [@Riahi:2011dk].
+We coupled a mechanistic population dynamic model (i.e., the DBEM) with an Earth System Model (i.e., the Geophysical Fluid Dynamics Laboratory Earth system model, GFDL) to project the future global distribution of transboundary stocks’ under climate change (see the Supplementary Materials). Roughly, the DBEM algorithm uses historical species distribution and catch, eco-physiology, habitat suitability and spatial population dynamics to project abundance and potential fisheries catches in a $0.5^o$ x $0.5^o$ grid-cell of the world [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd]. The DBEM was driven for ten different versions of the GFDL (i.e., a ten-ensemble member simulation) each of them representing an unique atmosphere and ocean state at the start of the simulation [@Dunne:2012bo; @Dunne:2013db; @Frolicher:2020cc]. The simulations were run under historical forcing until 2005, afterwards and until 2100, simulations followed a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5) [@Riahi:2011dk].
 
-Furthermore, we developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock's abundance centroid and that of the EEZs that share such stock (Fig. \@ref(fig:toeFigure1)A)). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(equ:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
+Furthermore, we developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock's abundance centroid and that of the EEZs that share such stock (Fig. \@ref(fig:toeFigure1)A)). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(equ:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
 
-Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Clark:1975uu; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (See Supplemental Material - *Quantifying the intensity of transboundary stocks’ range shift*). A threat point is defined as the minimum payoff a player would be willing to receive to cooperate in a game-theoretic model. Here, we define the minimum payoff as two standard deviations from the historical catch proportion (average of 1951 to 2005) that each EEZ had for each stock. This assumes that no EEZ will be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Finally, we computed changes in the catch proportion that were below the threat point of the neighbouring EEZs sharing a stock for two time periods; 2030 (2021 and 2040) matching the UN 2030 Agenda and a late date (2040 to 2050), relative to 1951 to 2005.
-
-
-
+Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Clark:1975uu; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (See Supplemental Material - *Quantifying the intensity of transboundary stocks’ range shift*). A threat point is defined as the minimum payoff a player would be willing to receive to cooperate in a game-theoretic model. Here, we define the minimum payoff as two standard deviations from the historical catch proportion (average of 1951 to 2005) that each EEZ had for each stock. This assumes that countries are adapted to the historical sharing but no country will be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Finally, we computed changes in the catch proportion that were below the threat point of the neighbouring EEZs sharing a stock for two time periods relative to the historical proportion; 2030 (2021 and 2040) matching the UN 2030 Agenda and a late date (2040 to 2050).
 
 
 <div id="refs"></div>
